--- a/css/style.css
+++ b/css/style.css
@@ -248,11 +248,7 @@ body {
   .projectBlock {
     text-align: center;
   }
-  .button {
-    margin-left: 100px;
-    display: flex;
-    
-  }
+
   .Email {
         padding-left: 10px;
     text-underline-position: under;
@@ -278,7 +274,7 @@ body {
   }
   .button {
     transition: transform 0.2s ease-in-out;
-    color: blue;
+    color: blue !important;
   }
   .button:hover {
     transform: scale(1.1);
